# m5-infer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  chat.sh  pyproject.toml  start.sh  stop.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
app/: __init__.py
app/api/: routes.py  schemas.py  server.py
app/backend/: adapter.py  custom_generate.py  generation.py  image_preprocessor.py  mask_adapter.py  mlx_text_backend.py  mlx_vision_backend.py  speculative.py
app/cli/: _http.py  bench.py  cache.py  chat.py  models.py  pull.py  status.py
app/core/: auto_tune.py  config.py  hardware_profile.py  logging.py  model_family.py  model_registry.py  paths.py  thread_priority.py
app/engine/: cache_manager.py  context_compressor.py  context_redundancy.py  innovation_executor.py  long_gen_optimizer.py  main_model_manager.py  memory_guard.py  mmrs_registry.py  mrpb_scheduler.py  oirc.py  quality_monitor.py  session_manager.py  sub_model_controller.py  supervisor.py
app/innovation/: feature_flags.py
app/innovation/lookahead/: lookahead_decode.py
app/innovation/mtab/: __init__.py  prefix_matcher.py  tier_cache.py
app/innovation/n1_ctrsp/: session_integration.py  state_persistence.py
app/innovation/n2_ggsa/: importance_scorer.py
app/innovation/n3_ssee/: acceptance_monitor.py  exit_head.py  self_speculative.py
app/innovation/n4_layer_skip/: profiler.py  skip_controller.py
app/innovation/n5_expert_route/: fallback.py  predictive_router.py  route_profiler.py
app/innovation/n6_parallel_expert/: aggregator.py  parallel_stream.py
app/innovation/rdms/: __init__.py  draft_loader.py  hybrid_speculative.py
app/innovation/speculative/: draft_speculative.py
app/innovation/ssd/: __init__.py  ngram_builder.py  (+2 more)
app/planner/: plan_types.py  request_planner.py  routing.py  speed_selector.py
app/storage/: sqlite_store.py
configs/: engine.toml  models.toml
docs/: MODEL_FAMILY_GUIDE.md  ROADMAP.md  fullsuite_summary.json  opus_quality_summary.json  thinking_summary.json
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_core/: test_hardware_profile.py  test_model_family.py
tests/test_engine/: test_session_manager.py
tests/test_planner/: test_plan_types.py
(+18 files in other folders)
