[project]
name = "m5-infer"
version = "1.1.2"
description = "Extraordinary speed, extraordinary quality — an MLX-based inference engine for Apple Silicon."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "dualform-labs" },
]
keywords = ["mlx", "llm", "inference", "apple-silicon", "openai-compatible", "qwen", "llama", "gemma"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Python 3.11 / 3.12 / 3.13 / 3.14 all supported. MLX ships cp311-cp314 wheels
# on PyPI; we track its supported window. Bump the upper bound when MLX
# announces 3.15 support.
requires-python = ">=3.11,<3.15"

dependencies = [
    "mlx>=0.31.1",
    "mlx-lm>=0.21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "tomlkit>=0.13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
m5-infer = "app.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project name "m5-infer" doesn't match import package "app" — tell hatch
# explicitly which directory to ship as the wheel.
packages = ["app"]

# Ship the default config files INSIDE the package as app/_defaults/*.toml so
# PyPI installs can load them via importlib.resources even when no local
# ./configs/ directory exists. Source-tree installs still see ./configs/ first.
[tool.hatch.build.targets.wheel.force-include]
"configs/engine.toml" = "app/_defaults/engine.toml"
"configs/models.toml" = "app/_defaults/models.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/dualform-labs/m5-infer"
Repository = "https://github.com/dualform-labs/m5-infer"
Issues = "https://github.com/dualform-labs/m5-infer/issues"
